@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-23T16:20:40Z",
-  "count_outdated" : 477,
-  "uniques_outdated" : 272,
-  "count" : 499,
-  "uniques" : 289,
+  "timestamp" : "2022-08-24T01:42:49Z",
+  "count_outdated" : 479,
+  "uniques_outdated" : 274,
+  "count" : 500,
+  "uniques" : 290,
   "clones" : [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 10,
