@@ -1,12 +1,7 @@
 {
-  "count": 22,
-  "uniques": 14,
+  "count": 21,
+  "uniques": 13,
   "clones": [
-    {
-      "timestamp": "2022-08-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-10T00:00:00Z",
       "count": 10,
